examples/test_package/Double_dc_no_hash_full_tool/steps/benchrps___precise_run1/#test_analysis_1_result.txt
### Rock-Paper-Scissors Game Analysis Report

---

#### **1. Document Title**
**Analysis of Rock-Paper-Scissors Game Logic in ProbLog**

---

#### **2. Background and Purpose**
The provided code implements the classic game of rock-paper-scissors in ProbLog. It defines the game's rules, calculates the result of each round, and determines the winner based on the players' moves. The purpose of this analysis is to verify the correctness of the implementation, identify any failures, and ensure compliance with ProbLog's logical and probabilistic rules.

---

#### **3. Test Results Summary**
The test query provided is:
```prolog
query(determine_winner([rock,rock,rock],[paper,paper,scissor],W)).
```

**Result:**
The test failed with the following error:
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 41:77.
```

**Interpretation:**
The error indicates that the ProbLog engine could not find a clause for the predicate `determine_winner/3` at the specified location. This suggests a syntax or definition issue in the code.

---

#### **4. Failure Localization**
- **Failed Query:** `determine_winner([rock,rock,rock],[paper,paper,scissor],W)`.
- **Error Location:** The error points to line 41, column 77, where the predicate `determine_winner/3` is called or defined.
- **Root Cause:** The predicate `determine_winner/3` is not correctly defined or is missing in the provided code. The code block for `determine_winner` is incomplete and lacks proper termination or syntax.

---

#### **5. Root Cause Analysis**
- **Logical Correctness:**
  - The predicates `move/1`, `beats/2`, `result/3`, and `play/3` are correctly defined and logically sound.
  - The `compute_score/2` predicate is correctly implemented for `win`, `lose`, and `draw` cases.
  - The issue lies in the incomplete definition of `determine_winner/3`.

- **Probabilistic Context:**
  - The code does not use probabilistic facts or DeepProbLog features (e.g., `nn/3`, `tensor/…`). Thus, the analysis focuses on classical Prolog reasoning.
  - No probabilistic rules (e.g., `P(¬A)=1−P(A)`) are violated, as none are used.

- **Recursive Termination:**
  - The recursive predicates (`play/3` and `compute_score/2`) correctly terminate for empty lists, ensuring no infinite recursion.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** Partially met. The core game logic (`move`, `beats`, `result`, `play`, `compute_score`) is correct, but the `determine_winner` predicate is incomplete.
  - **Probabilistic Reasoning:** Not applicable (no probabilistic facts or rules).
  - **Neural Network Integration:** Not used.

- **Edge Cases:**
  - **Non-list Input:** The code assumes input lists for `play/3` and `compute_score/2`. Non-list inputs would cause errors.
  - **Deep Recursion:** The recursion depth is limited by the length of the input lists, so performance is not an issue for typical game lengths.

---

#### **7. Error Summary**

| No. | Problem                          | Impact                          | Suggestion                                                                 |
|-----|----------------------------------|---------------------------------|----------------------------------------------------------------------------|
| 1   | Incomplete `determine_winner/3` | Test query fails               | Complete the definition of `determine_winner/3` as per the requirements.  |
| 2   | Syntax error in `determine_winner` | ProbLog engine cannot parse   | Ensure proper syntax and termination for the predicate.                    |

---

#### **8. Suggested Fix**
To resolve the issue, the `determine_winner/3` predicate should be correctly defined as follows:
```prolog
determine_winner(P1Moves, P2Moves, Winner) :-
    play(P1Moves, P2Moves, Results),
    compute_score(Results, Score),
    (Score > 0 -> Winner = 'Player 1';
     Score < 0 -> Winner = 'Player 2';
     Winner = 'Draw').
```

This ensures the predicate is complete and adheres to the requirements.

---

**Word Count:** ~450 words.  
**Tone:** Formal and analytical.  
**Conclusion:** The core logic of the game is sound, but the `determine_winner/3` predicate must be fixed to pass the test. No probabilistic or DeepProbLog features are used.